@@ -1,3 +1,11 @@
+2001-11-06  Joshua Sled  <jsled@asynchronous.org>
+
+	* src/gnome/dialog-sxsincelast.c (create_each_transaction_helper):
+	Fixed credit/debit confusion.
+
+	* src/gnome/dialog-sx-from-trans.c (sxftd_add_template_trans):
+	Fixed credit/debit confusion.
+
 2001-11-04  Joshua Sled  <jsled@asynchronous.org>
 
 	* src/gnome-utils/gnc-frequency.c: saving state and updating the
